# 5ox

./: .gitignore  5ox.cabal  README.md
.github/workflows/: build.yml
app/: Main.hs
nix/: package.nix
src/: App.hs  Events.hs  GameLogic.hs  Init.hs  Render.hs
